Enable the battery level proxy and fetching features to show battery levels of both halves

--- a/boards/shields/totem/totem_dongle.conf
+++ b/boards/shields/totem/totem_dongle.conf
@@ -1,5 +1,13 @@
 # Copyright (c) 2024 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+
+# Disable deep sleep
 CONFIG_ZMK_SLEEP=n
+
+# Improve wireless performance
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable the battery level proxy and fetching features to show battery levels of both halves
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
