--- a/boards/shields/totem/totem_right.conf
+++ b/boards/shields/totem/totem_right.conf
@@ -1,1 +1,4 @@
+# Enable the battery level proxy and fetching features to show battery levels of both halves
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
