--- a/boards/shields/totem/totem_dongle.conf
+++ b/boards/shields/totem/totem_dongle.conf
@@ -11,3 +11,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Enable the battery level proxy and fetching features to show battery levels of both halves
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Prevent macOS from waking up from sleep
+CONFIG_BT_BAS=n
