--- a/boards/shields/totem/totem_right.conf
+++ b/boards/shields/totem/totem_right.conf
@@ -2,3 +2,6 @@
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
+# Prevent macOS from waking up from sleep
+CONFIG_BT_BAS=n
+
