include config with prospector

--- a/build.yaml
+++ b/build.yaml
@@ -20,10 +20,14 @@
 ---
 include:
   - board: seeeduino_xiao_ble
+    shield: settings_reset
+
+  - board: seeeduino_xiao_ble
     shield: totem_left
   - board: seeeduino_xiao_ble
     shield: totem_right
   - board: seeeduino_xiao_ble
     shield: totem_dongle
+
   - board: seeeduino_xiao_ble
-    shield: settings_reset
+    shield: totem_dongle prospector_adapter
